--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "raven-js": "^3.14.2",
     "vue": "^2.2.6"
   },
   "devDependencies": {
